--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "^26.6.3",
     "stylelint": "^13.12.0",
     "stylelint-config-standard": "^21.0.0",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "sass": "~1.32.6"
   }
 }
