--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "eslint": "^7.22.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
+    "fibers": "^5.0.0",
     "jest": "^26.6.3",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.2.0",
     "stylelint": "^13.12.0",
     "stylelint-config-standard": "^21.0.0",
-    "vue-jest": "^3.0.4",
-    "sass": "~1.32.6"
+    "vue-jest": "^3.0.4"
   }
 }
